--- a/index.html
+++ b/index.html
@@ -1,1 +1,234 @@
-hello world from Roman Simonov
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="src/assets/styles/style.css">
+    <title>Lesson 4</title>
+</head>
+<body>
+
+<div class="mobile__menu inactive" id="mobile__menu">
+    <svg class="mobile__menu--cross" id="mobile__menu--cross" width="24" height="24" fill="#98A2B3">
+        <use href="./src/sprites.svg#cross"/>
+    </svg>
+    <a href="/">
+        <h1>IT WEBSITE</h1>
+    </a>
+    <div class="mobile__menu--items">
+        <a class="mobile__menu--item" href="#">Services</a>
+        <a class="mobile__menu--item" href="#">Media</a>
+        <a class="mobile__menu--item" href="#">Cases</a>
+        <a class="mobile__menu--item" href="#">FAQ</a>
+        <a class="mobile__menu--item" href="#">Contacts</a>
+    </div>
+    <div class="mobile__menu--contacts--list">
+        <div class="mobile__menu--contacts--item">
+            <svg fill="#2D66EE" width="14px" height="20px">
+                <use href="./src/sprites.svg#phone"/>
+            </svg>
+            <a href="tel:+71111111111">+7 (111) 111 11 11</a>
+        </div>
+        <div class="mobile__menu--contacts--item">
+            <svg fill="#2D66EE" width="14px" height="20px">
+                <use href="./src/sprites.svg#phone"/>
+            </svg>
+            <a href="tel:+71111111111">+7 (111) 111 11 11</a>
+        </div>
+        <div class="mobile__menu--contacts--item">
+            <svg fill="#2D66EE" width="20px" height="16px">
+                <use href="./src/sprites.svg#email"/>
+            </svg>
+            <a class="mail" href="mailto:itcompany@mail.com">itcompany@mail.com</a>
+        </div>
+    </div>
+</div>
+
+<div class="container sticky__header">
+    <div class="header">
+        <div class="header__burger--wrapper">
+            <div class="header__burger" id="header__burger">
+                <span></span>
+            </div>
+        </div>
+        <a href="/">
+            <h2>IT WEBSITE</h2>
+        </a>
+        <div class="subhead-medium header__menu--items">
+            <a class="header__menu--item" href="#">Services</a>
+            <a class="header__menu--item" href="#">Media</a>
+            <a class="header__menu--item" href="#">Cases</a>
+            <a class="header__menu--item" href="#">FAQ</a>
+            <a class="header__menu--item" href="#">Contacts</a>
+        </div>
+        <div class="subhead-medium header__contacts">
+            <svg fill="#2D66EE" width="14px" height="20px">
+                <use href="./src/sprites.svg#phone"/>
+            </svg>
+            <a href="tel:+71111111111">+7 (111) 111 11 11</a>
+            <a href="tel:+71111111111">+7 (111) 111 11 11</a>
+        </div>
+        <div class="subhead-medium header__email">
+            <svg fill="#2D66EE" width="20px" height="16px">
+                <use href="./src/sprites.svg#email"/>
+            </svg>
+            <a class="mail" href="mailto:itcompany@mail.com">itcompany@mail.com</a>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="screenshots--groups">
+        <div class="screenshots--group--items">
+            <div class="screenshots--item screenshot__1"></div>
+            <div class="screenshots--item screenshot__2"></div>
+            <div class="screenshots--item screenshot__3"></div>
+        </div>
+        <div class="screenshots--group--items">
+            <div class="screenshots--item screenshot__4"></div>
+            <div class="screenshots--item screenshot__5"></div>
+            <div class="screenshots--item screenshot__6"></div>
+        </div>
+    </div>
+    <div class="welcome">
+        <div class="welcome__title">
+            <h1 class="title-1-bold">Development of <span class="welcome__title blue-text">mobile applications</span>
+                and
+                <span class="welcome__text blue-text">web services</span> of any complexity</h1>
+        </div>
+        <div class="welcome__text">
+            <p class="text-medium">We create mobile applications for iOS, Android that transfer your business to mobile
+                applications of your
+                customers' devices</p>
+        </div>
+        <div class="welcome__form">
+            <h4 class="subtitle-2-bold-Inter">Leave your contacts and we will call you back <br>
+                within 30 minutes</h4>
+            <form action="">
+                <div class="welcome__form__input-box">
+                    <label class="caption-1-medium" for="welcome-form-tel">Phone number</label>
+                    <input class="title-3-regular welcome__form__input-box__input" type="tel" id="welcome-form-tel">
+                </div>
+                <div class="welcome__form__input-box">
+                    <label class="caption-1-medium" for="welcome-form-name">Full name</label>
+                    <input class="title-3-regular welcome__form__input-box__input" type="text" id="welcome-form-name">
+                </div>
+                <input class="subhead-semibold welcome__form__button" type="submit" value="Get consultation">
+            </form>
+        </div>
+    </div>
+</div>
+<div class="dev__info">
+    <div class="dev__info--technologies--options">
+        <h2 class="title-1-bold">Full development cycle</h2>
+        <p class="text-medium">We use proven technologies</p>
+        <div class="dev__info--technologies--option">
+            <h4 class="sf-title-2-semibold">Web</h4>
+            <p class="title-3-regular">PHP / Javascript / Node.JS / Web Socket / Socket.io / Vue.js/ Nuxt / MySQL /
+                Laravel / GO lang / django / Python</p>
+        </div>
+        <div class="dev__info--technologies--option">
+            <h4 class="sf-title-2-semibold">Mobile</h4>
+            <p class="title-3-regular">Swift / Kotlin / Alamofire / Firebase / CoreData / Room / Realm / Coroutine /
+                RxJava / RxSwift / Unit Test / Navigation</p>
+        </div>
+    </div>
+    <div class="dev__info--services">
+        <a class="sf-title-2-regular" href="#">
+            <span>iOS development</span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+        <a class="sf-title-2-regular" href="#">
+            <span> Android development </span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+        <a class="sf-title-2-regular" href="#">
+            <span> Web development </span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+        <a class="sf-title-2-regular" href="#">
+            <span> UI/UX design </span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+        <a class="sf-title-2-regular" href="#">
+            <span> Testing </span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+        <a class="sf-title-2-regular" href="#">
+            <span> Launch </span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+        <a class="sf-title-2-regular" href="#">
+            <span> IT consulting </span>
+            <svg fill="#2D66EE" width="7" height="12">
+                <use href="./src/sprites.svg#chevron"/>
+            </svg>
+        </a>
+    </div>
+</div>
+
+<footer class="container">
+    <h1>IT WEBSITE</h1>
+    <div class="footer__list--elements">
+        <div class="footer__list--element">
+            <div class="footer__list--element--label">
+                <svg fill="#98A2B3" width="14" height="20">
+                    <use href="./src/sprites.svg#phone"/>
+                </svg>
+                <p class="subhead-medium">Contact nums</p>
+            </div>
+            <a class="sf-title-3-semibold" href="tel:+77783959026">+7 (778) 395 90 26</a>
+        </div>
+        <div class="footer__list--element">
+            <div class="footer__list--element--label">
+                <svg fill="#98A2B3" width="20" height="16">
+                    <use href="./src/sprites.svg#email"/>
+                </svg>
+                <p class="subhead-medium">Post</p>
+            </div>
+            <a class="sf-title-3-semibold" href="mailto:mail@mail.com">mail@mail.com</a>
+        </div>
+        <div class="footer__list--element">
+            <div class="footer__list--element--label">
+                <svg fill="#98A2B3" width="15.5" height="20">
+                    <use href="./src/sprites.svg#map-mark"/>
+                </svg>
+                <p class="subhead-medium">Adress</p>
+            </div>
+            <a class="sf-title-3-semibold"
+               href="https://2gis.ru/tyumen/firm/70000001027202230/65.522943%2C57.159183?m=65.526144%2C57.159937%2F16.66">City
+                city, street st. 90</a>
+        </div>
+        <div class="footer__list--element">
+            <div class="footer__list--element--label">
+                <svg fill="#98A2B3" width="17" height="20">
+                    <use href="./src/sprites.svg#file"/>
+                </svg>
+                <p class="subhead-medium">Leave a request</p>
+            </div>
+            <a class="sf-title-3-semibold" href="#">Leave a request</a>
+        </div>
+    </div>
+    <div class="footer__list--epilogue">
+        <svg fill="#FFFFFF" width="30px" height="16px">
+            <use href="./src/sprites.svg#kazakhstan"/>
+        </svg>
+        <p class="caption-1-regular">We work throughout world</p>
+    </div>
+</footer>
+<script src="./src/assets/js/script.js"></script>
+</body>
+</html>
